@@ -1,8 +1,18 @@
 Next release
 ============
 
+Features
+--------
+
+- Allow multiple values to be specified to the ``request_param`` view/route
+  predicate as a sequence.  Previously only a single string value was allowed.
+  See https://github.com/Pylons/pyramid/pull/705
+
 Bug Fixes
 ---------
+
+- The match_param predicate's text method was fixed to sort its values.
+  Part of https://github.com/Pylons/pyramid/pull/705
 
 - 1.4a ``pyramid.scripting.prepare`` behaved differently than 1.3 series
   function of same name.  In particular, if passed a request, it would not
